tests/snapshots/mutual_recursion__a_b_c.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/mutual_recursion/a_b_c.hvm
---
@A = @B
@B = @C
@C = @A
@main = @A
