tests/snapshots/mutual_recursion__multiple.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/mutual_recursion/multiple.hvm
---
@A = @B
@B = @C
@C = @A
@H = @I
@I = @H
@M = @M
@N = ({3 (a b) c} b)
& @N ~ (c a)
@main = *
