tests/snapshots/mutual_recursion__odd_even.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/mutual_recursion/odd_even.hvm
---
@False = {2 * {2 a a}}
@True = {2 a {2 * a}}
@a = (* @b)
@b = (a (* a))
@c = (* (a a))
@if = (?<(@c @a) (a (b c))> (a (b c)))
@isEven = ({5 <== #0 a> <- #1 b>} c)
& @if ~ (a (@True (d c)))
& @isOdd ~ (b d)
@isOdd = ({3 <== #0 a> <- #1 b>} c)
& @if ~ (a (@False (d c)))
& @isEven ~ (b d)
@main = a
& @isOdd ~ (#4 a)
